# UKAEAGroupProject

./: .gitignore  Auto-encoder.py  AutoEncoder.py  Classifier.ipynb  Classifier_grid_search.py  DataExploration.ipynb  InOutClassifier.ipynb  QLKNN.py  QLKNNDataPreparation.ipynb  QLKNN_Regressor.ipynb  README.md  RegressionOutputs.ipynb  UCL_env.txt  UKAEA_data_exploration.ipynb  baseline_config.yaml  classifier_optimisation.ipynb  pipeline_config_example.yaml  requirements.txt  setup.cfg  setup.py  train.py  train_ae.py  utils.py
data/: classifier_TEM_ITG.py  classifier_unstable_invalid.py  make_data.py
notebooks/: DataExploration.ipynb  RegressionOutputs.ipynb
src/notebooks/: AutoEncoderOutputs.ipynb  Classifier.ipynb  DataExploration.ipynb  DeepGaussianProcess.ipynb  Entropy.ipynb  GP-NN-Comparison.ipynb  GaussianProcess.ipynb  GaussianProcess_old.ipynb  ITG_Classifier.ipynb  ITG_TEM_classifier.ipynb  InOutClassifier.ipynb  LoadResults.ipynb  QLKNNDataPreparation.ipynb  RegressionOutputs.ipynb  RegressionVariance.ipynb  Temperature_Scaling.ipynb  VAE.ipynb  classifier_invalid_maybe_unstable.ipynb  classifier_optimisation.ipynb  flatten.ipynb  pipeline.ipynb  pipeline_config.yaml  run_pipeline.ipynb
src/pipeline/: CLPipeline.py  Models.py  pipeline_config.yaml  pipeline_config_CL.yaml  pipeline_config_CL_shrinkperturb.yaml  pipeline_config_debug.yaml  pipeline_tools.py  produce_baselines.py  run_pipeline.py
src/scripts/: AutoEncoder.py  Classifier.py  Classifier_grid_search.py  Models.py  QLKNN.py  classifier_optimisation.py  compare_models.py  flatten.py  (+15 more)
(+9 files in other folders)
