[metadata]
name = UKAEA_GROUP_PROJECT
version = 0.0.1
description = UCL CDT DIS UKAEA Group Project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zcapjdb/UKAEAGroupProject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src